--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="dk.thomas.socialsustainability">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -11,6 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SocialSustainability">
+        <activity
+            android:name=".ViewProject"
+            android:exported="true" />
         <activity
             android:name=".Feed"
             android:exported="true">
@@ -26,11 +29,6 @@
         <activity
             android:name=".Profile"
             android:exported="true" />
-
-
-
     </application>
-
-
 
 </manifest>
